# EXEX

./: .gitignore  Cargo.toml  README.md
examples/: client-demo.html  client-example.js  test-api.js  test-api.ps1
src/: lib.rs  main.rs
src/config/: mod.rs
src/handlers/: app_ops.rs  exec.rs  file_ops.rs  health.rs  mod.rs
src/models/: mod.rs
src/security/: mod.rs
tests/: allowed-paths-test.ps1  complete-operations-test.ps1  comprehensive-test.js  console-test-suite.ps1  cross-platform-config-test.ps1  integration_tests.rs  simple-dynamic-config-test.ps1  simple-operations-test.ps1  test-args.ps1
tests/integration/: api_tests.rs
tests/test_data/: test_data.txt
tests/unit/: config_tests.rs  model_tests.rs  security_tests.rs
