[package]
name = "exex"
version = "0.0.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"
log = "0.4"
dirs = "5.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.0"
tokio-test = "0.4"
